[package]
name = "rust-ssl-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-rustls = "0.24.0"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
http-body-util = "0.1.0-rc.2"
rustls-pemfile = "1.0.2"
argh = "0.1.10"
http = "0.2.9"
